@@ -1,6 +1,18 @@
 // Package HForms.Util
 if (!window.HForms) window.HForms = {};
 HForms.Util = (function () {
+   const focusFirst = function() {
+      const forms = document.getElementsByTagName('form');
+      if (!forms) return;
+      for (const form of forms) {
+         if (form.className != 'classic') continue;
+         const selector = 'div.input-field:not(.input-hidden) input';
+         const field = form.querySelector(selector);
+         if (!field) continue;
+         field.focus();
+         break;
+      }
+   };
    const onReady = function(callback) {
       if (document.readyState != 'loading') callback();
       else if (document.addEventListener)
@@ -16,8 +28,9 @@ HForms.Util = (function () {
       document.getElementById(id).value = hours + ':' + mins + ' ' + zone;
    };
    const wrapperIdPrefix = 'field_';
-
+   onReady(function(event) { focusFirst() });
    return {
+      focusFirst: focusFirst,
       onReady: onReady,
       updateTimeWithZone: updateTimeWithZone,
       wrapperIdPrefix: wrapperIdPrefix
